sample/msvc/error/c2042.cpp
// C2042.cpp
unsigned signed int i;   // C2042
